--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,9 @@
-body{
-    background: #1c1b1b;
-    color: #666;
-    font-family: Arial,sans-serif;
+#gameboard{
+  background: red;
 }
-h1{
-    text-align: center;
-    color: #fff;
+.row{
+  background: blue;
 }
-#clearfix{
-    clear: both;
-}
-#container{
-    width: 350px;
-    background: #666;
-    overflow: auto;
-    margin: 40px auto;
-    border-radius: 10px;
-    padding-bottom: 40px;
-}
-#board li{
-    float: left;
-    background: #333;
-    margin: 10px;
-    height: 70px;
-    width: 70px;
-    color: #ccc;
-    font-size: 55px;
-    list-style: none;
-    text-align: center;
-    border-radius: 5px;
-}
-#board li:hover{
-    cursor: pointer;
-    background: #000;
-}
-#reset{
-    border: 0;
-    background: #444;
-    color: #ccc;
-    width: 70%;
-    padding: 15px;
-    border-radius: 5px;
-}
-#reset:hover{
-    cursor: pointer;
-    background: #000;
-}
-
-.o{
-    color: green !important;
-}
-.x{
-    color: red !important;
-}
-footer{
-    display: block;
-    text-align: center;
-    padding-top: 20px;
+.square{
+  background: green;
 }
